[package]
name = "druid-gridview"
version = "0.1.0"
authors = ["lazypassion <25536767+lazypassion@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"


[dev-dependencies]
rand = {version = "0.8", features=["small_rng"]}